# agent-desktop

./: Cargo.toml  LICENSE  PLAN.md  README.md  THIRD_PARTY_NOTICES
.github/workflows/: build.yml  docs.yml  e2e-linux.yml  e2e-macos.yml  e2e-windows.yml  publish.yml
docs/: highlight.js  index.html  style.css  template.html
e2e/: e2e-linux.sh  e2e-macos.sh  e2e-windows.ps1
evals/: EVAL_FORMAT.md
evals/scenarios/: calculator-multiply.md  gedit-create-file.md  observe-app-window-name.md  observe-running-apps.md
skills/openclaw/: SKILL.md
src/: main.rs  query.rs  state.rs  types.rs
src/commands/: annotate.rs  click.rs  interact.rs  key.rs  mcp.rs  mod.rs  observe.rs  read.rs  screenshot.rs  scroll.rs  setup.rs  type_text.rs  wait.rs
src/inference/: florence2.rs  mod.rs  nms.rs  ocr.rs  preprocessing.rs  yolo.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/platform/accessibility/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: e2e_cli.rs  e2e_live.rs  e2e_mcp.rs  e2e_pipeline.rs
